// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Password can render a disable input 1`] = `
<div id="passwordField"
     class="o-forms-field ncf__password-field"
     data-validate="required,password"
>
  <label for="password"
         class="o-forms-title"
  >
    <span class="o-forms-title__main">
      Password
    </span>
    <span class="o-forms-title__prompt">
      Use 8 or more characters with a mix of letters, numbers &amp; symbols
    </span>
  </label>
  <div class="o-forms-input o-forms-input--password o-forms-input--checkbox o-forms-input--suffix">
    <input type="password"
           id="password"
           name="password"
           placeholder="Enter a password"
           autocomplete="new-password"
           data-trackable="field-password"
           aria-required="true"
           required
           disabled
    >
    <label class="ncf__password-field--show-password">
      <input type="checkbox"
             id="showPassword"
             name="showPassword"
             data-trackable="field-show-password"
             aria-label="Show password"
      >
      <span class="o-forms-input__label"
            aria-hidden="true"
      >
        Show password
      </span>
    </label>
    <div class="o-forms-input__error">
      Please enter a valid password
    </div>
  </div>
</div>
`;

exports[`Password can render a disable input 2`] = `
<div id="passwordField"
     class="o-forms-field ncf__password-field"
     data-validate="required,password"
>
  <label for="password"
         class="o-forms-title"
  >
    <span class="o-forms-title__main">
      Password
    </span>
    <span class="o-forms-title__prompt">
      Use 8 or more characters with a mix of letters, numbers &amp; symbols
    </span>
  </label>
  <div class="o-forms-input o-forms-input--password o-forms-input--checkbox o-forms-input--suffix">
    <input type="password"
           id="password"
           name="password"
           placeholder="Enter a password"
           autocomplete="new-password"
           data-trackable="field-password"
           aria-required="true"
           required
           disabled
    >
    <label class="ncf__password-field--show-password">
      <input type="checkbox"
             id="showPassword"
             name="showPassword"
             data-trackable="field-show-password"
             aria-label="Show password"
      >
      <span class="o-forms-input__label"
            aria-hidden="true"
      >
        Show password
      </span>
    </label>
    <div class="o-forms-input__error">
      Please enter a valid password
    </div>
  </div>
</div>
`;

exports[`Password can render a pattern attribute 1`] = `
<div id="passwordField"
     class="o-forms-field ncf__password-field"
     data-validate="required,password"
>
  <label for="password"
         class="o-forms-title"
  >
    <span class="o-forms-title__main">
      Password
    </span>
    <span class="o-forms-title__prompt">
      Use 8 or more characters with a mix of letters, numbers &amp; symbols
    </span>
  </label>
  <div class="o-forms-input o-forms-input--password o-forms-input--checkbox o-forms-input--suffix">
    <input type="password"
           id="password"
           name="password"
           placeholder="Enter a password"
           autocomplete="new-password"
           data-trackable="field-password"
           aria-required="true"
           required
           pattern="Whatever"
    >
    <label class="ncf__password-field--show-password">
      <input type="checkbox"
             id="showPassword"
             name="showPassword"
             data-trackable="field-show-password"
             aria-label="Show password"
      >
      <span class="o-forms-input__label"
            aria-hidden="true"
      >
        Show password
      </span>
    </label>
    <div class="o-forms-input__error">
      Please enter a valid password
    </div>
  </div>
</div>
`;

exports[`Password can render a pattern attribute 2`] = `
<div id="passwordField"
     class="o-forms-field ncf__password-field"
     data-validate="required,password"
>
  <label for="password"
         class="o-forms-title"
  >
    <span class="o-forms-title__main">
      Password
    </span>
    <span class="o-forms-title__prompt">
      Use 8 or more characters with a mix of letters, numbers &amp; symbols
    </span>
  </label>
  <div class="o-forms-input o-forms-input--password o-forms-input--checkbox o-forms-input--suffix">
    <input type="password"
           id="password"
           name="password"
           placeholder="Enter a password"
           autocomplete="new-password"
           data-trackable="field-password"
           aria-required="true"
           required
           pattern="Whatever"
    >
    <label class="ncf__password-field--show-password">
      <input type="checkbox"
             id="showPassword"
             name="showPassword"
             data-trackable="field-show-password"
             aria-label="Show password"
      >
      <span class="o-forms-input__label"
            aria-hidden="true"
      >
        Show password
      </span>
    </label>
    <div class="o-forms-input__error">
      Please enter a valid password
    </div>
  </div>
</div>
`;

exports[`Password can render as an Error 1`] = `
<div id="passwordField"
     class="o-forms-field ncf__password-field"
     data-validate="required,password"
>
  <label for="password"
         class="o-forms-title"
  >
    <span class="o-forms-title__main">
      Password
    </span>
    <span class="o-forms-title__prompt">
      Use 8 or more characters with a mix of letters, numbers &amp; symbols
    </span>
  </label>
  <div class="o-forms-input o-forms-input--password o-forms-input--checkbox o-forms-input--suffix o-forms-input--invalid">
    <input type="password"
           id="password"
           name="password"
           placeholder="Enter a password"
           autocomplete="new-password"
           data-trackable="field-password"
           aria-required="true"
           required
    >
    <label class="ncf__password-field--show-password">
      <input type="checkbox"
             id="showPassword"
             name="showPassword"
             data-trackable="field-show-password"
             aria-label="Show password"
      >
      <span class="o-forms-input__label"
            aria-hidden="true"
      >
        Show password
      </span>
    </label>
    <div class="o-forms-input__error">
      Please enter a valid password
    </div>
  </div>
</div>
`;

exports[`Password can render as an Error 2`] = `
<div id="passwordField"
     class="o-forms-field ncf__password-field"
     data-validate="required,password"
>
  <label for="password"
         class="o-forms-title"
  >
    <span class="o-forms-title__main">
      Password
    </span>
    <span class="o-forms-title__prompt">
      Use 8 or more characters with a mix of letters, numbers &amp; symbols
    </span>
  </label>
  <div class="o-forms-input o-forms-input--password o-forms-input--checkbox o-forms-input--suffix o-forms-input--invalid">
    <input type="password"
           id="password"
           name="password"
           placeholder="Enter a password"
           autocomplete="new-password"
           data-trackable="field-password"
           aria-required="true"
           required
    >
    <label class="ncf__password-field--show-password">
      <input type="checkbox"
             id="showPassword"
             name="showPassword"
             data-trackable="field-show-password"
             aria-label="Show password"
      >
      <span class="o-forms-input__label"
            aria-hidden="true"
      >
        Show password
      </span>
    </label>
    <div class="o-forms-input__error">
      Please enter a valid password
    </div>
  </div>
</div>
`;

exports[`Password can render as an Unknown user 1`] = `
<div id="passwordField"
     class="o-forms-field ncf__password-field js-unknown-user-field"
     data-validate="required,password"
>
  <label for="password"
         class="o-forms-title"
  >
    <span class="o-forms-title__main">
      Password
    </span>
    <span class="o-forms-title__prompt">
      Use 8 or more characters with a mix of letters, numbers &amp; symbols
    </span>
  </label>
  <div class="o-forms-input o-forms-input--password o-forms-input--checkbox o-forms-input--suffix">
    <input type="password"
           id="password"
           name="password"
           placeholder="Enter a password"
           autocomplete="new-password"
           data-trackable="field-password"
           aria-required="true"
           required
    >
    <label class="ncf__password-field--show-password">
      <input type="checkbox"
             id="showPassword"
             name="showPassword"
             data-trackable="field-show-password"
             aria-label="Show password"
      >
      <span class="o-forms-input__label"
            aria-hidden="true"
      >
        Show password
      </span>
    </label>
    <div class="o-forms-input__error">
      Please enter a valid password
    </div>
  </div>
</div>
`;

exports[`Password can render as an Unknown user 2`] = `
<div id="passwordField"
     class="o-forms-field ncf__password-field js-unknown-user-field"
     data-validate="required,password"
>
  <label for="password"
         class="o-forms-title"
  >
    <span class="o-forms-title__main">
      Password
    </span>
    <span class="o-forms-title__prompt">
      Use 8 or more characters with a mix of letters, numbers &amp; symbols
    </span>
  </label>
  <div class="o-forms-input o-forms-input--password o-forms-input--checkbox o-forms-input--suffix">
    <input type="password"
           id="password"
           name="password"
           placeholder="Enter a password"
           autocomplete="new-password"
           data-trackable="field-password"
           aria-required="true"
           required
    >
    <label class="ncf__password-field--show-password">
      <input type="checkbox"
             id="showPassword"
             name="showPassword"
             data-trackable="field-show-password"
             aria-label="Show password"
      >
      <span class="o-forms-input__label"
            aria-hidden="true"
      >
        Show password
      </span>
    </label>
    <div class="o-forms-input__error">
      Please enter a valid password
    </div>
  </div>
</div>
`;

exports[`Password render a password input with a label where input ID and Name are the same 1`] = `
<div id="passwordField"
     class="o-forms-field ncf__password-field"
     data-validate="required,password"
>
  <label for="password"
         class="o-forms-title"
  >
    <span class="o-forms-title__main">
      Password
    </span>
    <span class="o-forms-title__prompt">
      Use 8 or more characters with a mix of letters, numbers &amp; symbols
    </span>
  </label>
  <div class="o-forms-input o-forms-input--password o-forms-input--checkbox o-forms-input--suffix">
    <input type="password"
           id="password"
           name="password"
           placeholder="Enter a password"
           autocomplete="new-password"
           data-trackable="field-password"
           aria-required="true"
           required
    >
    <label class="ncf__password-field--show-password">
      <input type="checkbox"
             id="showPassword"
             name="showPassword"
             data-trackable="field-show-password"
             aria-label="Show password"
      >
      <span class="o-forms-input__label"
            aria-hidden="true"
      >
        Show password
      </span>
    </label>
    <div class="o-forms-input__error">
      Please enter a valid password
    </div>
  </div>
</div>
`;

exports[`Password render a password input with a label where input ID and Name are the same 2`] = `
<div id="passwordField"
     class="o-forms-field ncf__password-field"
     data-validate="required,password"
>
  <label for="password"
         class="o-forms-title"
  >
    <span class="o-forms-title__main">
      Password
    </span>
    <span class="o-forms-title__prompt">
      Use 8 or more characters with a mix of letters, numbers &amp; symbols
    </span>
  </label>
  <div class="o-forms-input o-forms-input--password o-forms-input--checkbox o-forms-input--suffix">
    <input type="password"
           id="password"
           name="password"
           placeholder="Enter a password"
           autocomplete="new-password"
           data-trackable="field-password"
           aria-required="true"
           required
    >
    <label class="ncf__password-field--show-password">
      <input type="checkbox"
             id="showPassword"
             name="showPassword"
             data-trackable="field-show-password"
             aria-label="Show password"
      >
      <span class="o-forms-input__label"
            aria-hidden="true"
      >
        Show password
      </span>
    </label>
    <div class="o-forms-input__error">
      Please enter a valid password
    </div>
  </div>
</div>
`;
